--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/react-scroll": "^1.8.7",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
